--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/demo/renderer.js"></script>
+    <script type="module" src="/demo/reactive.js"></script>
   </body>
 </html>
